--- a/FlashCards/Base.lproj/Main.storyboard
+++ b/FlashCards/Base.lproj/Main.storyboard
@@ -28,7 +28,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="myCell" id="fPn-O5-ZuQ">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="myCell" id="fPn-O5-ZuQ" customClass="DeckCollectionViewCell" customModule="FlashCards" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="135" height="128"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -50,6 +50,7 @@
                                             <constraint firstAttribute="bottom" secondItem="bUU-nN-FLe" secondAttribute="bottom" id="vhP-DI-IMA"/>
                                         </constraints>
                                         <connections>
+                                            <outlet property="titleLabel" destination="bUU-nN-FLe" id="4QH-G6-niu"/>
                                             <segue destination="Z4a-JB-IOc" kind="show" identifier="ToCardSegue" id="jG2-M2-jIq"/>
                                         </connections>
                                     </collectionViewCell>
